Fix : calendar、feedback block discontinuance and Running Problems 1. fix the problem of spacing alignment between mobile versions in the comment section. 2. fix the broken line problem of PC version of Noon Tea Calendar. 3. add hover color for more SVG images. 4. add the effect of button switching in the afternoon tea calendar and in the polling.

--- a/assets/scss/base/_utility.scss
+++ b/assets/scss/base/_utility.scss
@@ -18,11 +18,16 @@ $utilities: map-merge($utilities,
 
 
 // "看更多" 連結的 CSS
-.see-more {
+.see-more,
+.svg-hover path {
   transition: .5s;
 
   &:hover {
     color: $gray-01 !important;
+
+    .svg-hover path {
+      fill: $gray-01 !important;
+    }
   }
 
   .modal-sm-mx12 {
