--- a/assets/scss/layout/_tea-calendar.scss
+++ b/assets/scss/layout/_tea-calendar.scss
@@ -28,7 +28,11 @@
 
     .event-rounded {
         border-radius: 80px 80px 16px 16px;
-        // max-width: 306px;
+        width: 100%;
+
+        @include media-breakpoint-up(md) {
+            max-width: 306px;
+        }
     }
 
     .event-pic {
@@ -46,6 +50,11 @@
     .time-rounded {
         border-radius: 16px;
     }
+
+    
+
+    // filter: invert(7%) sepia(11%) saturate(11%) hue-rotate(314deg) brightness(97%) contrast(90%) !important;
+
 }
 
 .active {
